--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -36,11 +36,11 @@
     	<span class="byline">&larr; <a href="{{ HOME_PATH }}">{{ site.author.name }}</a></span>
     </h1>
     <ul class="nav">
-      <li><a class="home" href="{{ HOME_PATH }}">Home</a></li>
-      <li><a  href="/archive.html">Archive</a></li>
-      <li><a  href="/pages.html">Pages</a></li>
-      <li><a  href="/categories.html">Categories</a></li>
-      <li><a  href="/tags.html">Tags</a></li>
+      <li><a class="home" href="{{ HOME_PATH }}">首页</a></li>
+      <li><a  href="/archive.html">归档</a></li>
+      <li><a  href="/pages.html">页面</a></li>
+      <li><a  href="/categories.html">分类</a></li>
+      <li><a  href="/tags.html">标签</a></li>
     </ul>
   </div>
 
